fix: add scroll to popup with overflowing content

--- a/blocks/popup/__close-button/popup__close__button.css
+++ b/blocks/popup/__close-button/popup__close__button.css
@@ -1,5 +1,6 @@
 .popup__close-button {
   position: absolute;
+  z-index: 100;
   padding: 0;
   width: 32px;
   height: 32px;
