--- a/blocks/popup/__overlay/popup__overlay.css
+++ b/blocks/popup/__overlay/popup__overlay.css
@@ -2,7 +2,7 @@
   z-index: 9;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 100vh;
+  min-height: 200vh;
 
   position: absolute;
   top: 0;
