--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,10 +8,13 @@
   opacity: 1;
 
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  /*overflow: scroll;*/
+  /*overflow-Y: auto;*/
 }
